--- a/index.html
+++ b/index.html
@@ -31,7 +31,17 @@
                 <div class="search-bar"><i class="fa-solid fa-magnifying-glass"></i><input type="text"></div>
                 <div class="profile-bar"><img src="./images/profile.jpeg" alt="profile-image"><a>Bruno David</a></div>
             </nav>
-            
+            <div class="header-bar">
+                <div class="welcome">
+                    <img src="./images/profile.jpeg" alt="profile-image">
+                    <span> <p>Hi there</p> <h2>Bruno David (@bdavidg3)</h2> </span>
+                </div>
+                <div class="buttons">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>    
+            </div>
         </header>
 
         <main>
