add img projects

--- a/index.html
+++ b/index.html
@@ -52,20 +52,40 @@
                 <div class="projects-title"><h3>Your Projects</h3></div>
                 <div class="projects">
                     <div class="card">
-                        <h4>Project 1</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quibusdam molestias eligendi accusamus dolorem accusantium est commodi? Eveniet, iusto neque recusandae quo consectetur libero. Exercitationem officia cupiditate ipsam voluptates laudantium!</p>
+                        <h4>Coding Camp</h4>
+                        <img src="./images/project1" alt="">
+                        <p>A landing page style page, created with the learning obtained in FreeCodeCamp and with a responsive design</p>
+                        <div class="project-buttons">
+                            <a href="">Live Preview</a>
+                            <a href="">Source Code</a>
+                        </div>
                     </div>
                     <div class="card">
-                        <h4>Project 2</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quibusdam molestias eligendi accusamus dolorem accusantium est commodi? Eveniet, iusto neque recusandae quo consectetur libero. Exercitationem officia cupiditate ipsam voluptates laudantium!</p>
+                        <h4>Etch a Sketch</h4>
+                        <img src="./images/project2.png" alt="">
+                        <p>A whiteboard where you can create any pixel-art you can think of. Uses DOM management using Java</p>
+                        <div class="project-buttons">
+                            <a href="">Live Preview</a>
+                            <a href="">Source Code</a>
+                        </div>
                     </div>
                     <div class="card">
-                        <h4>Project 3</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quibusdam molestias eligendi accusamus dolorem accusantium est commodi? Eveniet, iusto neque recusandae quo consectetur libero. Exercitationem officia cupiditate ipsam voluptates laudantium!</p>
+                        <h4>Basic Calculator</h4>
+                        <img src="./images/project3.png" alt="">
+                        <p>A basic calculator, you may not be able to perform complicated calculations, but it is used to demonstrate my basic knowledge of JS</p>
+                        <div class="project-buttons">
+                            <a href="">Live Preview</a>
+                            <a href="">Source Code</a>
+                        </div>
                     </div>
                     <div class="card">
-                        <h4>Project 4</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quibusdam molestias eligendi accusamus dolorem accusantium est commodi? Eveniet, iusto neque recusandae quo consectetur libero. Exercitationem officia cupiditate ipsam voluptates laudantium!</p>
+                        <h4>Sign-Up Form</h4>
+                        <img src="./images/project4.png" alt="">
+                        <p>A sign-up screen that demonstrates the basics of using HTML forms. Obviously it's not functional, it's just a demonstration.</p>
+                        <div class="project-buttons">
+                            <a href="">Live Preview</a>
+                            <a href="">Source Code</a>
+                        </div>
                     </div>
                 </div>
             </div>
