--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Admin Dashboard</title>
+    <link rel="icon" href="https://www.freeiconspng.com/thumbs/dashboard-icon/dashboard-icon-3.png">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
